# senus-board-report

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08a7ccfba048_add_unit_to_line_items_and_target_kind_.py  6f43dd7d7f9f_add_sign_convention_to_financial_line_.py  705e17c2c225_restore_sign_convention_to_financial_.py  88c62cd5a6f6_widen_financial_line_item_value_to_.py  ce2eee455f8c_initial_schema_documents_periods_line_.py
backend/app/core/: config.py
backend/app/db/: base.py  seed_periods.py  session.py
backend/app/models/: __init__.py  enums.py  financial.py  insight.py  metrics.py  source.py
docs/: PROJECT_INSTRUCTIONS.md  assumptions-log.md  source-inventory.md
docs/validation-notes/: DOC-01-extraction-v1.md  DOC-02-extraction-v1.md  DOC-03-extraction-v1.md
extraction-pipeline/: check_fixtures.py  check_load.py  requirements.txt
extraction-pipeline/extraction/: extraction_service.py  load_rules.py  loader.py  schemas.py
fixtures/extraction/: DOC-01.json  DOC-02.JSON  DOC-02.json  DOC-03.json
frontend/: package.json
infra/: docker-compose.yml
prompts/: extraction_v1.md
